WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224701
The RemoteRemoteCommandListener destructor should never (re-)launch the GPUProcess
https://bugs.webkit.org/show_bug.cgi?id=224701
Summary
The RemoteRemoteCommandListener destructor should never (re-)launch the GPUPr...
Chris Dumez
Reported
2021-04-16 16:03:54 PDT
The RemoteRemoteCommandListener destructor should never (re-)launch the GPUProcess, just to unregister itself. If the GPUProcess is not running, then the RemoteRemoteCommandListener is not registered.
Attachments
Patch
(2.51 KB, patch)
2021-04-16 16:05 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(2.50 KB, patch)
2021-04-16 16:06 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-04-16 16:05:35 PDT
Created
attachment 426289
[details]
Patch
Chris Dumez
Comment 2
2021-04-16 16:06:48 PDT
Created
attachment 426290
[details]
Patch
EWS
Comment 3
2021-04-16 17:38:12 PDT
Committed
r276185
(
236667@main
): <
https://commits.webkit.org/236667@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 426290
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-04-24 15:08:37 PDT
<
rdar://problem/77110113
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug