The RemoteRemoteCommandListener destructor should never (re-)launch the GPUProcess https://bugs.webkit.org/show_bug.cgi?id=224701

Reviewed by Eric Carlson.

The RemoteRemoteCommandListener destructor should never (re-)launch the GPUProcess,
just to unregister itself. If the GPUProcess is not running, then the
RemoteRemoteCommandListener is not registered.

* WebProcess/GPU/media/RemoteRemoteCommandListener.cpp:
(WebKit::RemoteRemoteCommandListener::~RemoteRemoteCommandListener):
(WebKit::RemoteRemoteCommandListener::gpuProcessConnectionDidClose):


Canonical link: https://commits.webkit.org/236667@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276185 268f45cc-cd09-0410-ab3c-d52691b4dbfc